[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://scenes/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/ui/Player_Portrait/portrait3.png" type="Texture" id=3]
[ext_resource path="res://images/ui/UI_borders.png" type="Texture" id=4]
[ext_resource path="res://scenes/ManaBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/SkillSlot.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ExpBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/monogram.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://images/ui/Player_Portrait/portrait1.png" type="Texture" id=9]
[ext_resource path="res://images/ui/Player_Portrait/portrait2 .png" type="Texture" id=10]
[ext_resource path="res://images/ui/Player_Portrait/portrait4.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 8 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI_borders" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 132, 40 )
scale = Vector2( 1.26316, 1.47368 )
texture = ExtResource( 4 )

[node name="UI_borders2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 94, 86 )
scale = Vector2( 0.863158, 0.947368 )
texture = ExtResource( 4 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
position = Vector2( 92, 28 )
scale = Vector2( 1.75, 1.75 )

[node name="ManaBar" parent="." instance=ExtResource( 5 )]
position = Vector2( 92, 52 )
scale = Vector2( 1.75, 1.75 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 24.0
margin_top = 20.0
margin_right = 56.0
margin_bottom = 52.0
rect_scale = Vector2( 1.3, 1.3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Player_Portrait" type="AnimatedSprite" parent="TextureButton"]
position = Vector2( 20, 7 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 1 )
frame = 2
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="ExpBar" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = 75.233
margin_top = 57.319
margin_right = 507.233
margin_bottom = 73.319
rect_scale = Vector2( 0.1, 0.2 )

[node name="Skill_Slot1" parent="." instance=ExtResource( 6 )]
margin_left = 16.0
margin_top = 72.0
margin_right = 48.0
margin_bottom = 104.0
cooldown = 2.0

[node name="Skill_Slot2" parent="." instance=ExtResource( 6 )]
margin_left = 48.0
margin_top = 72.0
margin_right = 80.0
margin_bottom = 104.0
cooldown = 5.0

[node name="Skill_Slot3" parent="." instance=ExtResource( 6 )]
margin_left = 80.0
margin_top = 72.0
margin_right = 112.0
margin_bottom = 104.0

[node name="Skill_Slot4" parent="." instance=ExtResource( 6 )]
margin_left = 112.0
margin_top = 72.0
margin_right = 144.0
margin_bottom = 104.0

[node name="Skill_Slot5" parent="." instance=ExtResource( 6 )]
margin_left = 144.0
margin_top = 72.0
margin_right = 176.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 121.331
margin_top = 52.2698
margin_right = 161.331
margin_bottom = 66.2698
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "EXP"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
